<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Train_App</string>

    <string name="action_settings">Settings</string>

    <!-- ACCESSIBILITY -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_achievement_list">AchievementListActivity</string>

    <!-- For Layouts -->
    <string name="train_number"> Numero treno</string>
    <string name="dep_station"> Stazione di partenza </string>
    <string name="arr_station"> Stazione di arrivo </string>
    <string name="delay">Ritardo: </string>
    <string name="progress">Andamento: </string>
    <string name="last_seen">Ultimo rilevamento: </string>
    <string name="star"> ★ </string>
    <string name="planned">PROGRAMMATO </string>
    <string name="actual">REALE </string>
    <string name="time">Ore: </string>
    <string name="platform">Binario: </string>
    <string name="showTime">Orario </string>
    <string name="showDate">Data </string>
    <string name="duration">Durata: </string>
    <string name="abbrDelay">Ritardo:</string>


</resources>
