<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <TextView
        android:id="@+id/tStationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"

        android:paddingLeft="4dp"
        android:layout_marginTop="16dp"

        android:textStyle="bold"
        android:textSize="16dp"
        android:textAllCaps="true"
         />

    <TextView
        android:id="@+id/lTimeDifference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toRightOf="@+id/tStationName"
        android:textSize="12dp"
        android:layout_marginTop="19dp"
        android:paddingLeft="16dp"
        android:textStyle="italic"
        android:text="@string/abbrDelay"
        />

    <TextView
        android:id="@+id/tTimeDifference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/lTimeDifference"

        android:layout_marginTop="17dp"
        android:layout_marginLeft="4dp"

        />


    <TextView
        android:id="@+id/lPlanned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/tStationName"

        android:paddingLeft="4dp"
        android:layout_marginTop="6dp"

        android:textStyle="italic"
        android:textSize="12dp"
        android:text="@string/planned"
        />

    <TextView
        android:id="@+id/lPlannedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/lPlanned"

        android:paddingLeft="4dp"
        android:layout_marginTop="4dp"

        android:text="@string/time"
        />

    <TextView
        android:id="@+id/tPlannedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toRightOf="@+id/lPlannedTime"
        android:layout_below="@+id/lPlanned"

        android:paddingLeft="4dp"
        android:layout_marginTop="4dp"

        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/lPlannedPlatform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toRightOf="@+id/tPlannedTime"
        android:layout_below="@+id/lPlanned"

        android:paddingLeft="32dp"
        android:layout_marginTop="4dp"

        android:text="@string/platform"
        />

    <TextView
        android:id="@+id/tPlannedPlatform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toRightOf="@+id/lPlannedPlatform"
        android:layout_below="@id/lPlanned"

        android:paddingLeft="4dp"
        android:layout_marginTop="4dp"

        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/lActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/lPlannedTime"

        android:paddingLeft="4dp"
        android:layout_marginTop="6dp"

        android:textStyle="italic"
        android:textSize="12dp"
        android:text="@string/actual"
        />

    <TextView
        android:id="@+id/lActualTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/lActual"

        android:paddingLeft="4dp"
        android:layout_marginTop="4dp"

        android:text="@string/time"
        />

    <TextView
        android:id="@+id/tActualTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toRightOf="@+id/lActualTime"
        android:layout_below="@+id/lActual"

        android:paddingLeft="4dp"
        android:layout_marginTop="4dp"

        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/lActualPlatform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toRightOf="@+id/tActualTime"
        android:layout_below="@+id/lActual"

        android:paddingLeft="32dp"
        android:layout_marginTop="4dp"

        android:text="@string/platform"
        />

    <TextView
        android:id="@+id/tActualPlatform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toRightOf="@+id/lActualPlatform"
        android:layout_below="@id/lActual"

        android:paddingLeft="4dp"
        android:layout_marginTop="4dp"

        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tExtraMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/lActualTime"

        android:layout_marginTop="4dp"
        android:paddingLeft="4dp"
        />

</RelativeLayout>