<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#fff"
    android:clickable="true"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:layout_height="match_parent">

    <!-- android:clickable="true" è il comando della vita -->

    <EditText
        android:id="@+id/eTrainNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:maxEms="10"

        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"

        android:paddingLeft="4dp"
        android:layout_marginTop="32dp"

        android:hint="@string/train_number"
        android:singleLine="true"
        android:inputType="number"
        />

    <Button
        android:id="@+id/bTrainNumberSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/eTrainNumber"

        android:layout_marginTop="22dp"

        style="?android:attr/buttonStyleSmall"

        android:text="-->" />

    <!--////////////////////////////////////////////////////////////////////-->

    <EditText
        android:id="@+id/eDepartureStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:maxEms="10"

        android:layout_below="@+id/eTrainNumber"

        android:paddingLeft="4dp"
        android:layout_marginTop="32dp"

        android:hint="@string/dep_station"
        android:singleLine="true"
        />

    <EditText
        android:id="@+id/eArrivalStation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:maxEms="10"

        android:layout_below="@+id/eDepartureStation"

        android:paddingLeft="4dp"
        android:layout_marginTop="8dp"

        android:hint="@string/arr_station"
        android:singleLine="true"
     />

    <Button
        android:id="@+id/bTimePicker"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/eArrivalStation"

        android:onClick="showTimePickerDialog" />

    <Button
        android:id="@+id/bDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/eArrivalStation"
        android:layout_toRightOf="@id/bTimePicker"

        android:onClick="showDatePickerDialog" />

    <Button
    android:id="@+id/bJourneySearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/eDepartureStation"
        android:layout_toRightOf="@id/eArrivalStation"

        android:layout_marginTop="12dp"

        style="?android:attr/buttonStyleSmall"

        android:text="-->" />

    <!--////////////////////////////////////////////////////////////////////-->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lDrawerList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@id/bTimePicker"

        android:layout_marginTop="32dp"
    />


    <!--<ListView-->
        <!--android:id="@+id/lDrawerListView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!---->
        <!--android:layout_below="@id/eArrivalStation"-->
        <!---->
        <!--android:layout_marginTop="32dp"-->
        <!--/>-->

    <!--<Button-->
    <!--android:id="@+id/btnPrefTrains"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Treni preferiti" />-->

    <!--<Button-->
        <!--android:id="@+id/elimina"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Elimina" />-->


</RelativeLayout>